src/pnpm_install/snapshots/errors___pnpm_install_create_directory_error.snap
---
source: buildpacks/nodejs-pnpm-install/src/errors.rs
---
- Debug Info:
  - Insufficient permissions

! Failed to create directory
!
! An unexpected I/O error occurred while creating the directory at `/layers/pnpm_install/dir`.
!
! The causes for this error are unknown. We do not have suggestions for diagnosis or a workaround at this time. You can help our understanding by sharing your buildpack log and a description of the issue at:
! https://github.com/heroku/buildpacks-nodejs/issues
!
! If you're able to reproduce the problem with an example application and the `pack` build tool (https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/), adding that information to the discussion will also help. Once we have more information around the causes of this error we may update this message.
